# sfml_game_life

./: CMakeLists.txt  README  main.cpp
GUI/: Button.cpp  Button.hpp  Cell.cpp  Cell.hpp  ContextMenu.cpp  ContextMenu.hpp  ContextMenuElement.cpp  ContextMenuElement.hpp  HScrollbar.cpp  HScrollbar.hpp  HSlider.cpp  HSlider.hpp  MultilineTextArea.cpp  MultilineTextArea.hpp  OBJECT_GUI.hpp  Scrollbar.cpp  Scrollbar.hpp  Slider.cpp  Slider.hpp  Utils.hpp  VScrollbar.cpp  VScrollbar.hpp  VSlider.cpp  VSlider.hpp  Widget.cpp  Widget.hpp
game_logic/: Cell.cpp  Cell.hpp  Game.cpp  Game.hpp  GameWidget.cpp  GameWidget.hpp  game_logic.cpp  game_logic.hpp  my_types.hpp  settings.cpp  settings.hpp
pages/: GamePage.cpp  GamePage.hpp  MenuPage.cpp  MenuPage.hpp  Page.cpp  Page.hpp  RulesPage.cpp  RulesPage.hpp  SettingsPage.cpp  SettingsPage.hpp  Utils.hpp  game_page.cpp  game_page.hpp  menu_page.cpp  menu_page.hpp  rules_page.cpp  rules_page.hpp  settings_page.cpp  settings_page.hpp
